# icaf

./: .gitignore  README.md  pyproject.toml  requirements.txt  run.py  setup_check.py
adapters/: adapter_factory.py  cisco_adapter.py  linux_adapter.py  openwrt_adapter.py
clauses/clause_1_1_1/: clause.py  tc1_ssh_first_connection.py  tc2_ssh_valid_credentials.py  tc3_ssh_invalid_credentials.py
cli/: main.py
core/: clause.py  engine.py  step_runner.py  testcase.py
icaf/clauses/: registry.py
icaf/clauses/clause_1_1_1/: clause.py  ssh_mixin.py  tc1_snmp_v3_positive.py  tc2_snmp_v3_invalid_credentials.py  tc3_ssh_mutual_auth.py  tc4_ssh_correct_public_key.py  (+4 more)
icaf/cli/: main.py  preflight.py
icaf/config/: profile_loader.py
icaf/core/: engine.py  testcase.py
icaf/profile/: .~lock.alpine.xlsx#  alpine.xlsx  alpine.yaml  default.xlsx  default.yaml  metasploitable.yaml
icaf/reporting/: report_factory.py
icaf/steps/: analyze_pcap_step.py  browser_screenshot_step.py  click_step.py  command_step.py  fill_input_step.py  pcap_stop_step.py  screenshot_step.py  session_reset_step.py  verify_output_step.py  wait_step.py  wireshark_packet_screenshot_step.py
icaf/utils/: dut_info.py  oem_reader.py
reporting/: pdf_generator.py  report_manager.py
reporting/clause_reports/: clause_1_1_1_report.py
runtime/: context.py
steps/: browser_screenshot_step.py  command_step.py  expect_one_of_step.py  input_step.py  pcap_stop_step.py  screenshot_step.py  wireshark_packet_screenshot_step.py
terminal/: manager.py  visible_terminal.py
utils/: logger.py
(+9 files in other folders)
