[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "icaf"
version = "2.0.0"
description = "ITSAR Compliance Automation Framework (merged)"
requires-python = ">=3.9"

dependencies = [
    "typer",
    "rich",
    "selenium",
    "pyyaml",
    "python-docx",
    "pyautogui",
    "openpyxl",
    "python-dotenv",
    "pandas",
]

[project.scripts]
icaf = "icaf.cli.main:main"

[tool.setuptools.packages.find]
include = ["icaf*"]
exclude = ["logs*", "output*", "myenv*", "venv*"]
